Fix navbar phone overflow

--- a/assets/stylesheets/components/navbar.scss
+++ b/assets/stylesheets/components/navbar.scss
@@ -11,6 +11,7 @@
   padding: 10px 15px;
   margin: 0;
   border: 0;
+  overflow: hidden;
 }
 
 .logo{
